@@ -41,6 +41,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Handle reordering of layers with large ids properly. This was only a problem in the UI, it does not cause desync. Thanks Bluesflying for reporting.
  * Fix: Remove accessibility features, because they cause crashes on macOS and possibly also other operating systems even though Drawpile doesn't use them. This is a patch to Qt. Thanks kal^-^ for reporting.
  * Feature: Long-press to open context menus. Enabled by default on Android and in the browser. Can be toggled in the user interface preferences.
+ * Fix: Make sliders enter edit mode when you double-click them, not when you click and hold. Thanks Blozzom for suggesting.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
